--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,12 @@
+1.3 -> 1.4
+by Lichery
+Added localization support
+Added ruRU localization
+Added 'debug' command
+Added error messages if invalid variables were entered
+New style for print, error, debug messages
+Small optimization and cleaning of the code
+
 1.2 -> 1.3
 There is now a grey whipe effect on the icons.
 
